cabal-version: 2.4
name:
  steppenwolf
version:
  0.1.0.0
synopsis:
  stepwise debugger for haskell functions
description:
  see the README at https://github.com/steppenwolf#README
homepage:
  https://github.com/chessai/steppenwolf
bug-reports:
  https://github.com/chessai/steppenwolf/issues
license:
  BSD-3-Clause
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai1996@gmail.com
copyright:
  Copyright (c) 2021, chessai
extra-source-files:
  CHANGELOG.md

library
  exposed-modules:
    Steppenwolf
  build-depends:
    , base >= 4.12 && < 5
    , containers >= 0.5.9 && < 0.7
    , edit-distance >= 0.2 && < 0.3
    , mtl >= 2.2 && < 2.4
    , transformers >= 0.4 && < 0.7
  hs-source-dirs:
    src
  default-language:
    Haskell2010
